fixed - in All website dashboard, the font size is bigger now - IE: there could be a bit more right padding in the Actions URL table next to the expanding + icon - the full calendar div should be clickable (left/right pixels not clickable on calendar when folded) - The language selector appears below the website selector but I can't seem find a solution... maybe you can? I tried z-index on the language id span

--- a/plugins/CoreHome/templates/styles.css
+++ b/plugins/CoreHome/templates/styles.css
@@ -60,7 +60,7 @@ h3 {
 /* Content */
 #content.home {
 	padding-top:5px;
-	font-size:14px;
+	font-size:13px;
 }
 
 
