--- a/plugins/MultiSites/templates/styles.css
+++ b/plugins/MultiSites/templates/styles.css
@@ -1,6 +1,7 @@
 #multisites { 
 	border:0; 
 	padding:0px 15px;
+	font-size:13px;
 }
 
 
